--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,1 +1,8 @@
-<h1>ユーザーアカウント表示テスト</h1>
+<h1>投稿一覧</h1>
+<%= link_to '新規投稿', new_road_path, class: 'btn' %>
+<% @roads.each do |road| %>
+  <p>
+    <%= road.title %>
+    <%= road.description %>
+  </p>
+<% end %>
