コメントの投稿機能のコードを修正

--- a/app/views/roads/edit.html.erb
+++ b/app/views/roads/edit.html.erb
@@ -1,5 +1,5 @@
 <p>更新</p>
 <%= form_with model: @road, local: true do |f| %>
   <p>タイトル:<%= f.text_field :title %></p>
-  <p>コメント:<%= f.text_field :description %>d</p>
+  <p>コメント:<%= f.text_field :description %></p>
 <% end %>
