--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -1,4 +1,22 @@
 <p>新規投稿</p>
+<h2>Google Maps</h2>
+<div id='map'></div>
+
+<style>
+  #map {
+    height: 400px;
+  }
+</style>
+
+<script>
+function initMap(){
+    let map = new google.maps.Map(document.getElementById('map'), {
+    center: { lat: 35.6809591, lng:139.7673068 },
+    zoom: 12
+  });
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API'] %>&callback=initMap" async defer></script>
 <%= form_with model: @road, local: true do |f| %>
   <p>タイトル:<%= f.text_field :title %></p>
   <p>コメント:<%= f.text_field :description %></p>
