--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -9,10 +9,24 @@
 </style>
 
 <script>
-function initMap(){
-    let map = new google.maps.Map(document.getElementById('map'), {
-    center: { lat: 35.6809591, lng:139.7673068 },
-    zoom: 12
+  var map;
+  function initMap() {
+    // HMTL上にGoogle Mapsを表示
+    var target = document.getElementById('map');
+    var empire = {lat: 35.6809591, lng: 139.7673068};
+    map = new google.maps.Map(target, {
+      center: empire,
+      zoom: 14
+    });
+
+    // クリックした箇所にマーカーを設置
+    map.addListener('click', (e) => {
+      var marker = new google.maps.Marker({
+        position: e.latLng,
+        map: map,
+        title: e.latLng.toString(),
+        animation: google.maps.Animation.DROP
+    });
   });
 }
 </script>
