--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,2 +1,75 @@
-<h1>Roads#show</h1>
-<p>Find me in app/views/roads/show.html.erb</p>
+<%= @road.title %>
+<div id="map"></div>
+<div id="roads" data-roads="<%= @roads.to_json %>"></div>
+
+<%= @road.description %>
+
+<script>
+let map
+let geocoder
+let marker
+
+const tokyoStationLat = 35.6809591
+const tokyoStationLng = 139.7673068
+
+function initMap() {
+  geocoder = new google.maps.Geocoder();
+  // 初期マップ
+  mapInstance = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: tokyoStationLat, lng: tokyoStationLng},
+    zoom:12,
+    mapTypeControl: false
+  });
+
+
+  pos = new google.maps.LatLng(
+    <%= @road.latitude %>,
+    <%= @road.longitude %>
+  );
+  default_marker = new google.maps.Marker({
+    map: mapInstance,
+    position: pos,
+    icon: {
+      url: ' https://maps.google.com/mapfiles/ms/icons/green-dot.png',
+      scaledSize: new google.maps.Size(40, 40)
+    }
+  });
+}
+
+function codeAddress() {
+  let inputAddress = document.getElementById('address').value;
+
+  geocoder.geocode({
+    'address': inputAddress
+  }, function (results, status) {
+    if (status == 'OK') {
+      mapInstance.setCenter(results[0].geometry.location);
+
+      if(marker != null){
+        marker.setMap(null);
+      }
+      marker = null;
+
+      marker = new google.maps.Marker({
+        map: mapInstance,
+        position: results[0].geometry.location
+      });
+
+      let title = document.getElementById('map_title');
+      title.setAttribute("value", inputAddress);
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status)
+    }
+  });
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+
+<style>
+#map {
+  height: 600px;
+  width: 600px;
+}
+</style>
