--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -9,22 +9,22 @@ let map
 let geocoder
 let marker
 
-const tokyoStationLat = 35.6809591
-const tokyoStationLng = 139.7673068
+const savedLat = <%= @road.latitude %>
+const savedLng = <%= @road.longitude %>
 
 function initMap() {
   geocoder = new google.maps.Geocoder();
-  // 初期マップ
+  // 保存された座標データが中心に来るように設定
   mapInstance = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: tokyoStationLat, lng: tokyoStationLng},
-    zoom:12,
+    center: {lat: savedLat, lng: savedLng},
+    zoom:13,
     mapTypeControl: false
   });
 
-
+  // 保存された座標を使ってピンをさす
   pos = new google.maps.LatLng(
-    <%= @road.latitude %>,
-    <%= @road.longitude %>
+    savedLat,
+    savedLng
   );
   default_marker = new google.maps.Marker({
     map: mapInstance,
@@ -36,6 +36,7 @@ function initMap() {
   });
 }
 
+// 
 function codeAddress() {
   let inputAddress = document.getElementById('address').value;
 
