--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -2,9 +2,7 @@
 <%= link_to '新規投稿', new_road_path, class: 'btn' %>
 <% @roads.each do |road| %>
   <p><%= road.title %></p>
-  <% road.road_images.each do |image| %>
-    <%= image_tag image, width: '35%', height: '35%' %>
-  <% end %>
+  <%= image_tag road.road_images.first, width: '35%', height: '35%' %>
   <p><%= road.description %></p>
   <%= link_to "詳細", road_path(road) %>
   <%= link_to "編集", edit_road_path(road) %>
