--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <% if user_signed_in? %>
   <%= link_to 'アカウント編集', edit_user_registration_path %>
   <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか？' } %>
-  <%= "【ログイン中のアドレス】#{current_user.email}" %>
+  <%= "#{current_user.name}さん" %>
+  <%= link_to '新規投稿', new_road_path%>
 <% else %>
   <%= link_to '新規登録', new_user_registration_path %>
   <%= link_to 'ログイン', new_user_session_path %>
