--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -5,6 +5,8 @@
   <%= image_tag road.road_images.first, width: '35%', height: '35%' %>
   <p><%= road.description %></p>
   <%= link_to "詳細", road_path(road) %>
-  <%= link_to "編集", edit_road_path(road) %>
-  <%= link_to "削除", road_path(road), method: :delete, data: {confirm: "削除しますか？"} %>
+  <% if current_user.id == road.user_id %>
+    <%= link_to "編集", edit_road_path(road) %>
+    <%= link_to "削除", road_path(road), method: :delete, data: {confirm: "削除しますか？"} %>
+  <% end%>
 <% end %>
