--- a/app/views/roads/new.html.erb
+++ b/app/views/roads/new.html.erb
@@ -1,19 +1,10 @@
-<p>新規投稿</p>
+<h1>新規投稿</h1>
 <h2>Google Maps</h2>
 
 <input id="address" type="textbox">
 <input type="button" value="検索" placeholder="検索してマップを移動できます" onclick="searchArea()">
 
 <div id="map"></div>
-
-
-  <%# <ul>
-    <li>緯度: <span id="lat"></span></li>
-    <li>経度: <span id="lng"></span></li>
-  </ul> %>
-
-<%# <input id="lat">
-<input id="lng"> %>
 
 <%= form_with model: @road, local: true do |f| %>
   <p>緯度: <%=f.text_field :latitude %></p>
@@ -26,37 +17,37 @@
 
 
 <script>
-let map = {};
+let mapInstance = {};
 const tokyoStationLat = 35.6809591
 const tokyoStationLng = 139.7673068
 
 function initMap() {
   geocoder = new google.maps.Geocoder();
   // 初期マップ
-  map = new google.maps.Map(document.getElementById('map'), {
+  mapInstance = new google.maps.Map(document.getElementById('map'), {
     center: {lat: tokyoStationLat, lng: tokyoStationLng},
     zoom:12,
     mapTypeControl: false
   });
 
   // クリックしたときに関数を実行
-  map.addListener('click', function(e) {
-    getClickLatLng(e.latLng, map);
+  mapInstance.addListener('click', function(e) {
+    getClickLatLng(e.latLng, mapInstance);
     });
   }
 
 
 // 住所、座標を取得
-function getClickLatLng(latlng, map) {
+function getClickLatLng(latlng, mapInstance) {
   document.getElementById('road_latitude').value = latlng.lat();
   document.getElementById('road_longitude').value = latlng.lng();
 
   var marker = new google.maps.Marker({
     position: latlng,
-    map: map
+    map: mapInstance
   });
 
-  map.panTo(latlng);
+  mapInstance.panTo(latlng);
 }
 
 let geocoder
@@ -69,7 +60,7 @@ function searchArea() {
   geocoder.geocode( { 'address': inputAddress }, function(results, status) {
     // 該当する検索結果がヒットした時に、地図の中心を検索結果の緯度経度に更新
     if (status == 'OK') {
-      map.setCenter(results[0].geometry.location);
+      mapInstance.setCenter(results[0].geometry.location);
     } else {
       // 検索結果がなかった場合に表示
       alert('該当する結果がありませんでした:' + status);
