--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -20,6 +20,21 @@
   </p>
 <% end %>
 
+<h2>コメント一覧</h2>
+<% @comments.each do |c| %>
+  <div>
+    <a href="/users/<%= @road.user.id %>"><%= c.user.name %></a>
+    <%= c.content %>
+    <hr>
+  </div>
+<% end %>
+
+<%= form_for [@road, @comment] do |f| %>
+  <%= f.text_field :content %>
+  <br>
+  <%= f.submit 'コメントする' %>
+<% end %>
+
 <p><%= link_to "投稿一覧へ", roads_path %></p>
 
 <script>
