いいねリンクのmethodオプションをRESTルールに則りpostに修正

--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -9,7 +9,7 @@
     <%= link_to "★", road_likes_path(road.id), method: :delete %>
   <% else %>
     <%# 「いいね！」していない %>
-    <%= link_to "☆", road_likes_path(road.id), method: :road %>
+    <%= link_to "☆", road_likes_path(road.id), method: :post %>
   <% end %>
 </p>
   <p><%= road.description %></p>
