詳細ページのいいねを非同期処理化

--- a/app/views/roads/_like.html.erb
+++ b/app/views/roads/_like.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "★", road_likes_path(@road), method: :delete %>
+<%= link_to "★", road_likes_path(@road), method: :delete, remote: true %>
