--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,22 +1,4 @@
 <h1>投稿一覧</h1>
 <%= link_to '新規投稿', new_road_path, class: 'btn' %>
-<% @roads.each do |road| %>
-  <p><%= road.title %></p>
-  <%= image_tag road.road_images.first, width: '35%', height: '35%' %>
-  <p>
-  <% if road.liked_by?(current_user) %>
-    <%# 「いいね！」済み %>
-    <%= link_to "★", road_likes_path(road.id), method: :delete %>
-  <% else %>
-    <%# 「いいね！」していない %>
-    <%= link_to "☆", road_likes_path(road.id), method: :post %>
-  <% end %>
-</p>
-  <%= road.liked_users.count %>
-  <p><%= road.description %></p>
-  <%= link_to "詳細", road_path(road) %>
-  <% if current_user.id == road.user_id %>
-    <%= link_to "編集", edit_road_path(road) %>
-    <%= link_to "削除", road_path(road), method: :delete, data: {confirm: "削除しますか？"} %>
-  <% end%>
-<% end %>
+
+<%= render partial: 'road' %>
