--- a/app/views/roads/_road.html.erb
+++ b/app/views/roads/_road.html.erb
@@ -10,8 +10,8 @@
         <%# 「いいね！」していない %>
         <%= link_to "☆", road_likes_path(road.id), method: :post, remote: true %>
       <% end %>
+      <%= road.likes_count %>
     </p>
-    <%= road.liked_users.count %>
     <p><%= road.description %></p>
     <%= link_to "詳細", road_path(road) %>
     <% if current_user.id == road.user_id %>
