--- a/app/views/roads/_dislike.html.erb
+++ b/app/views/roads/_dislike.html.erb
@@ -1,2 +1,4 @@
-<%= link_to "☆", road_likes_path(@road), method: :post, remote: true %>
+<%= link_to road_likes_path(@road), class: "like-link", method: :post, remote: true do %>
+  <i class="far fa-heart like-btn"></i>
+<% end %>
 <%= @road.likes_count %>
