--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
   <%= "#{current_user.name}さん" %>
   <%= link_to '新規投稿', new_road_path%>
   <%= link_to '投稿一覧', roads_path%>
+  <%= link_to 'ユーザー一覧', users_path %>
 <% else %>
   <%= link_to '新規登録', new_user_registration_path %>
   <%= link_to 'ログイン', new_user_session_path %>
