--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,14 @@
 <h1>ユーザー一覧</h1>
 
 <% @users.each do |user| %>
-  <p><%= user.id %></p>
-  <p><%= user.name %></p>
-  <p><%= user.bike_name %></p>
-  <%= link_to "詳細", user_path(user) %>
+  <p>ID: <%= user.id %></p>
+  <p>ユーザー名: <%= user.name %></p>
+  <p>バイク: <%= user.bike_name %></p>
+  <% if user.prefecture_id == nil %>
+    <p>都道府県: <%= "---" %></p>
+  <% else %>
+    <p>都道府県: <%= @prefectures.find(user.prefecture_id).name %></p>
+  <% end %>
+
+  <%= link_to "詳細", user_path(user.id) %>
 <% end %>
