--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,11 @@
 <h1>プロフィール</h1>
 
 <h2>ユーザー情報</h2>
+<% if @user.avatar.attached? %>
+  <%= image_tag @user.avatar.variant(resize: '100×100') %>
+<% else %>
+  <%= image_tag "noimage.png", width: '100px', height: '100px' %>
+<% end %>
 <h3>ユーザー名: <%= @user.name %></h3>
 <h3>年齢: <%= @user.age %>歳</h3>
 <% if @user.gender == 0 %>
