部分テンプレート化

--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('road-<%= @road.id %>').innerHTML = '<%= j render("roads/dislike") %>'
+document.getElementById('road-<%= road.id %>').innerHTML = '<%= j render("roads/dislike") %>'
