--- a/app/views/roads/_like.html.erb
+++ b/app/views/roads/_like.html.erb
@@ -1,4 +1,4 @@
-<%= link_to road_likes_path(@road), class: "like-link", method: :delete, remote: true do %>
+<%= link_to road_likes_path(road), class: "like-link", method: :delete, remote: true do %>
   <i class="fas fa-heart unlike-btn"></i>
 <% end %>
-<%= @road.likes_count %>
+<%= road.likes_count %>
