material design bootstrap導入

--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -3,3 +3,21 @@
 
 <%= render partial: 'road' %>
 
+
+        <td><%= link_to 'Show', '#', class: "btn btn-outline-primary" %></td>
+        <td><%= link_to 'Edit', '#', class: "btn btn-raised btn-default" %></td>
+        <td><%= link_to 'Destroy', '#', class: "btn btn-raised btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  
+
+<br>
+
+<%= link_to 'New Post', '#', class: 'btn btn-raised btn-primary' %>
+
+<button type="button" class="btn btn-outline-primary">Primary</button>
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<button type="button" class="btn btn-outline-success">Success</button>
+<button type="button" class="btn btn-outline-danger">Danger</button>
+<button type="button" class="btn btn-outline-warning">Warning</button>
+<button type="button" class="btn btn-outline-info">Info</button>
+<button type="button" class="btn btn-outline-light">Light</button>
+<button type="button" class="btn btn-outline-dark">Dark</button>
