--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -2,3 +2,5 @@
 <%= link_to '新規投稿', new_road_path, class: 'btn' %>
 
 <%= render partial: 'road' %>
+
+<button type="button" class="btn btn-primary">Primary</button>
