navbarが正しく動作するように修正

--- a/app/views/roads/_road.html.erb
+++ b/app/views/roads/_road.html.erb
@@ -27,3 +27,4 @@
       <%= link_to "編集", edit_road_path(road) %>
       <%= link_to "削除", road_path(road), method: :delete, data: {confirm: "削除しますか？"} %>
     <% end%>
+  <% end %>
