indexが表示されるように修正

--- a/app/views/roads/_road.html.erb
+++ b/app/views/roads/_road.html.erb
@@ -1,4 +1,4 @@
-<p id="road-<%= @road.id %>">
+<p id="road-<%= road.id %>">
   <% if road.liked_by?(current_user) %>
     <%# 「いいね！」済み %>
     <%= render "like", road: road %>
