--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-document.getElementById('road-<%= @road.id %>').innerHTML = '<%= j render("roads/like") %>'
+document.getElementById('road-<%= @road.id %>').innerHTML = '<%= j render("roads/like", road: @road) %>'
