--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -2,19 +2,34 @@
 <%= link_to '新規投稿', new_road_path, class: 'btn' %>
 
 <% @roads.each do |road| %>
-  <p><%= road.title %></p>
-  <% if road.road_images.attached? %>
-    <%= image_tag road.road_images.first, width: '35%', height: '35%' %>
-  <% else %>
-    <%= image_tag "noimage.png", width: '120px', height: '120px' %>
-  <% end %>
-
-  <%= render partial: 'road', locals: {road: road} %>
-
-  <p><%= road.description %></p>
-  <%= link_to "詳細", road_path(road) %>
-  <% if current_user.id == road.user_id %>
-    <%= link_to "編集", edit_road_path(road) %>
-    <%= link_to "削除", road_path(road), method: :delete, data: {confirm: "削除しますか？"} %>
-  <% end%>
+  <div class="card-deck"></div>
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card-group">
+          <div class="card" style="width: 18rem;">
+            <div class="card-img-top">
+              <% if road.road_images.attached? %>
+                <%= image_tag road.road_images.first, width: '100%', height: '180' %>
+              <% else %>
+                <%= image_tag "noimage.png", width: '100%', height: '180' %>
+              <% end %>
+            </div>  
+            <div class="card-body">
+              <h5 class="card-title"><%= road.title %></h5>
+              <p class="card-title"><%= road.description %></p>
+            </div>
+            
+            <%= render partial: 'road', locals: {road: road} %>
+            
+            <%= link_to "詳細", road_path(road), class: "btn btn-primary w-25" %>
+          
+            <% if current_user.id == road.user_id %>
+              <%= link_to "編集", edit_road_path(road), class: "btn btn-primary w-25" %>
+              <%= link_to "削除", road_path(road), class: "btn btn-warning w-25", method: :delete, data: {confirm: "削除しますか？"} %>
+            <% end%> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
